feat: Implement collapsible sidebar in dashboard with toggle functionality

--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
-<div class="dashboard-layout">
-  <app-sidebar></app-sidebar>
+<div class="dashboard-layout"  [class.sidebar-collapsed]="isSidebarCollapsed">
+  <app-sidebar [isCollapsed]="isSidebarCollapsed" (toggleSidebar)="toggleSidebar()"></app-sidebar>
   <div class="content-area">
     <router-outlet></router-outlet>
   </div>
