--- a/src/app/components/dashboard/sidebar/sidebar.component.scss
+++ b/src/app/components/dashboard/sidebar/sidebar.component.scss
@@ -6,6 +6,19 @@
   height: 100vh;
   position: fixed;
   border-radius: 5px;
+  transition: width 0.3s ease;
+  &.collapsed {
+    width: 60px;
+    overflow: hidden;
+  }
+
+  .toggle-btn {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+    z-index: 10;
+  }
 
   h2 {
     text-align: center;
@@ -40,10 +53,6 @@
       &:hover {
         background-color: #575757;
         cursor: pointer;
-      }
-
-      &.active {
-        background-color: #4caf50;
       }
     }
   }
