--- a/src/app/components/dashboard/sidebar/sidebar.component.scss
+++ b/src/app/components/dashboard/sidebar/sidebar.component.scss
@@ -14,8 +14,8 @@
 
   .toggle-btn {
     position: absolute;
-    top: 10px;
-    right: 10px;
+    top: 5px;
+    inset-inline-start: 10px;
     cursor: pointer;
     z-index: 10;
   }
