--- a/src/app/components/dashboard/manage-posts/manage-posts.component.html
+++ b/src/app/components/dashboard/manage-posts/manage-posts.component.html
@@ -31,7 +31,11 @@
             </div>
           </a>
         </td>
-        <td>{{ post.createdDate | date : "short" }}</td>
+        <td>
+          <span dir="ltr">
+            {{ post.createdDate | date : "short" }}
+          </span>
+        </td>
         <td>
           <button
             class="delete-button"
@@ -44,6 +48,57 @@
       </tr>
     </tbody>
   </table>
+  <div *ngFor="let post of posts" class="dashboard-card">
+    <div class="card-item">
+      <span class="card-label">
+        {{ "DASHBOARD.SECTIONS.TABLE_HEADERS.CONTENT" | translate }}:
+      </span>
+      <span class="card-value">
+        <a [routerLink]="['/post', post.id]">
+          <div>
+            <span *ngIf="post.content.length > 10"
+              >{{ post.content | slice : 0 : 10 }}...</span
+            >
+            <span *ngIf="post.content.length <= 10">{{ post.content }}</span>
+          </div>
+        </a>
+      </span>
+    </div>
+    <div class="card-item">
+      <span class="card-label">
+        {{ "DASHBOARD.SECTIONS.TABLE_HEADERS.WRITER" | translate }}:
+      </span>
+      <span class="card-value">
+        <a [routerLink]="['/user-profile', post.authorName]">
+          <div>
+            <span dir="ltr">&#64;{{ post.authorName }}</span>
+          </div>
+        </a>
+      </span>
+    </div>
+    <div class="card-item">
+      <span class="card-label">
+        {{ "DASHBOARD.SECTIONS.TABLE_HEADERS.DATE" | translate }}:
+      </span>
+      <span class="card-value" dir="ltr">
+        {{ post.createdDate | date : "short" }}
+      </span>
+    </div>
+    <div class="card-item">
+      <span class="card-label">
+        {{ "DASHBOARD.SECTIONS.TABLE_HEADERS.ACTIONS" | translate }}:
+      </span>
+      <span class="card-value">
+        <button
+          class="delete-button"
+          (click)="onDeleteAccount(post.id)"
+          title="Delete Post"
+        >
+          {{ "DASHBOARD.BUTTONS.DELETE" | translate }}
+        </button>
+      </span>
+    </div>
+  </div>
 
   <div *ngIf="posts.length === 0 && !loading" class="no-results">
     <p>
