feat: Update comment date display to ensure left-to-right text direction and consistent date format across components

--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -79,7 +79,9 @@
               </p>
               <p class="comment-content">{{ comment.content }}</p>
               <p class="comment-date">
-                {{ comment.createdDate | date : "short" }}
+                <span dir="ltr">
+                  {{ comment.createdDate | date : "short" }}
+                </span>
               </p>
             </div>
           </div>
