--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -127,7 +127,7 @@
             </p>
             <p class="comment-content">{{ comment.content }}</p>
             <p class="comment-date">
-              {{ comment.createdDate | date : "short" }}
+              <span dir="ltr">{{ comment.createdDate | date : "short" }}</span>
             </p>
           </div>
         </div>
