--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -283,7 +283,9 @@
             <ng-template #commentText>
               <p class="comment-content">{{ comment.content }}</p>
               <p class="comment-date">
-                {{ comment.createdDate | date : "short" }}
+                <span dir="ltr">
+                  {{ comment.createdDate | date : "short" }}
+                </span>
               </p>
             </ng-template>
           </div>
