--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -86,7 +86,7 @@
           </p>
           <p class="comment-content">{{ comment.content }}</p>
           <p class="comment-date">
-            {{ comment.createdDate | date : "medium" }}
+            <span dir="ltr">{{ comment.createdDate | date : "short" }}</span>
           </p>
         </div>
       </div>
