--- a/src/app/components/post-deleting-confermation/post-deleting-confermation.component.html
+++ b/src/app/components/post-deleting-confermation/post-deleting-confermation.component.html
@@ -6,9 +6,9 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close="cancel">
-    {{ "DIALOG.CANCEL" | translate }}
+    {{ "ACTIONS.CANCEL" | translate }}
   </button>
   <button mat-raised-button color="warn" [mat-dialog-close]="'confirm'">
-    {{ "DIALOG.DELETE" | translate }}
+    {{ "ACTIONS.DELETE" | translate }}
   </button>
 </mat-dialog-actions>
