--- a/src/app/components/not-found/not-found.component.html
+++ b/src/app/components/not-found/not-found.component.html
@@ -5,7 +5,7 @@
       <h1><span>4</span><span>0</span><span>4</span></h1>
     </div>
     <h2>{{ "NOTFOUND.DESCRIPTION" | translate }}</h2>
-    <a routerLink="/home" class="back-home">
+    <a routerLink="/" class="back-home">
       {{ "NOTFOUND.NAVIGATOR" | translate }}
     </a>
   </div>
