--- a/src/app/components/registration/registration.component.html
+++ b/src/app/components/registration/registration.component.html
@@ -4,7 +4,7 @@
     [formGroup]="registrationForm"
     (ngSubmit)="onSubmit()"
   >
-    <h2>{{ "AUTH.REGISTER" | translate }}</h2>
+    <h2>{{ "AUTH.READER" | translate }}</h2>
     <div class="form-group">
       <label for="firstName">
         {{ "DASHBOARD.SECTIONS.TABLE_HEADERS.FIRST_NAME" | translate }}
