--- a/src/app/components/dashboard/manage-users/manage-users.component.scss
+++ b/src/app/components/dashboard/manage-users/manage-users.component.scss
@@ -46,3 +46,12 @@ input {
   width: 100%;
   padding: 5px 10px;
 }
+
+@media (max-width: 900px) {
+  .dashboard-pages-table {
+    display: none;
+  }
+  .dashboard-card {
+    display: block;
+  }
+}
