--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -153,25 +153,10 @@ $hover-color: #0056b3;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-top: 2px solid #f9f9f9;
   .count {
     font-size: 0.9rem;
     color: #666;
-    margin-bottom: 15px;
     font-weight: 300;
-  }
-
-  .btn-toggle-comments {
-    // background-color: $primary-color;
-    color: $primary-color;
-    border: none;
-    // padding: 12px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: 0.3s ease;
-
-    &:hover {
-      color: $hover-color;
-    }
   }
 }
