--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -60,11 +60,25 @@
           {{ post.modifiedDate | date : "medium" }}
         </span>
       </p>
-      <p class="post-date">
+      <div class="post-date">
+        <div class="like-section">
+          <button class="like-btn" (click)="toggleLike(post.id)">
+            <i
+              class="fa-heart"
+              [ngClass]="
+                isLikedByCurrentUser(post.id) ? 'fa-solid' : 'fa-regular'
+              "
+            ></i>
+          </button>
+          <span>
+            {{ (postLikesMap[post.id] || []).length }}
+            {{ "POST.LIKES" | translate }}
+          </span>
+        </div>
         <small>
           {{ "POST.COMMENTS" | translate }}: {{ post.comments.length }}
         </small>
-      </p>
+      </div>
       <div class="comments-section" *ngIf="post.comments.length > 0">
         <h3>{{ "POST.COMMENTS" | translate }}</h3>
         <div
