--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -128,7 +128,11 @@
           }}</a>
           <div
             class="post-options"
-            *ngIf="userName === post.authorName || userRole === 'admin'"
+            *ngIf="
+              userName === post.authorName ||
+              userRole === 'admin' ||
+              userRole === 'superadmin'
+            "
           >
             <button
               class="ellipsis-btn"
@@ -237,7 +241,8 @@
                 *ngIf="
                   comment.userName === userName ||
                   post.authorName === userName ||
-                  userRole === 'admin'
+                  userRole === 'admin' ||
+                  userRole === 'superadmin'
                 "
               >
                 <button
