--- a/src/app/components/user-profile/user-profile.component.html
+++ b/src/app/components/user-profile/user-profile.component.html
@@ -58,7 +58,7 @@
             {{ post.modifiedDate | date : "medium" }}
           </span>
         </p>
-        <div class="post-date">
+        <div class="reactions">
           <div class="like-section">
             <button class="like-btn" (click)="toggleLike(post.id)">
               <i
@@ -73,7 +73,7 @@
               {{ "POST.LIKES" | translate }}
             </span>
           </div>
-          <small>
+          <small class="comments-count">
             {{ "POST.COMMENTS" | translate }}: {{ post.comments.length }}
           </small>
         </div>
